@@ -1,3 +1,10 @@
+2014-07-07  James Hunt  <james.hunt@ubuntu.com>
+
+	* init/tests/test_job_process.c: test_handler():
+	  - Remove logs generated by PROCESS_MAIN. This wasn't necessary before
+	    due to the manifestation of LP: #1302117 not restoring the correct
+	    umask.
+
 2014-07-03  James Hunt  <james.hunt@ubuntu.com>
 
 	* init/job_process.c:
